# ReSWD

./: .gitignore  README.md  pyproject.toml
example/test_frames_with_color_patches/: Brunsviga-Illum1_checker-calibrite-passport-photo.npy  Brunsviga-Illum1_checker-calibrite-passport-photo_rec709.npy  Brunsviga-Illum2_checker-calibrite-passport-photo.npy  Brunsviga-Illum2_checker-calibrite-passport-photo_rec709.npy  Frames-Illum1_checker-calibrite-passport-photo.npy  Frames-Illum1_checker-calibrite-passport-photo_rec709.npy  Frames-Illum2_checker-calibrite-passport-photo.npy  Frames-Illum2_checker-calibrite-passport-photo_rec709.npy  Hat-Illum1_checker-calibrite-passport-photo.npy  Hat-Illum1_checker-calibrite-passport-photo_rec709.npy  Hat-Illum2_checker-calibrite-passport-photo.npy  Hat-Illum2_checker-calibrite-passport-photo_rec709.npy  Record-Illum1_checker-calibrite-passport-photo.npy  Record-Illum1_checker-calibrite-passport-photo_rec709.npy  Record-Illum2_checker-calibrite-passport-photo.npy  Record-Illum2_checker-calibrite-passport-photo_rec709.npy  Stuff-Illum1_checker-calibrite-passport-photo.npy  Stuff-Illum1_checker-calibrite-passport-photo_rec709.npy  Stuff-Illum2_checker-calibrite-passport-photo.npy  Stuff-Illum2_checker-calibrite-passport-photo_rec709.npy
src/: __main__.py  color_matcher.py  sw_sdthree_guidance.py
src/gradio_demo/: __main__.py  color_matching.py  sw_guidance.py
src/loss/: __init__.py  abstract_loss.py  vector_swd.py
src/utils/: asc_cdl.py  color_space.py  image.py  math.py
